2013-01-13 16:57-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Palettes/2Controls/GormColorWellAttributesInspector.m: NSColorWell
	inspector was showing inverted settings after the last change.
	Corrected this in -ok: and -revert:

2012-12-12 12:33-EST Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormViewEditor.m: Prevent recursive frame/bounds
	notifications when resizing a view.
	* Plugins/Nib/GormNibWrapperLoader.m: Preliminary changes to support
	reading nibs as files instead of packages.

2012-07-25 22:29-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormDocument.m: Apply patch suggested by Sebastian.
	This appears to correct an issue seen by Sergey causing an out of
	memory error.

2012-07-12: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* GormLib/IBObjectAdditions.m
	* revert change from 2012-04-20, to fix Connection Inspector
	  on at least a couple of *BSD

2012-06-19 00:44-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* ANNOUNCE
	* Documentation/news.texi
	* GormCore/GormDocument.m
	* GormCore/GormFilePrefsManager.m
	* GormCore/GormObjectEditor.m
	* GormCore/GormViewEditor.m
	* GormCore/GormViewWindow.m
	* GormInfo.plist
	* NEWS
	* Version: 1.2.18

2012-05-01 23:25-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormDocument.m
	* GormCore/GormFilePrefsManager.m
	* GormCore/GormStandaloneViewEditor.m
	* GormCore/GormViewWithContentViewEditor.m
	* GormCore/GormWindowTemplate.m
	* Palettes/0Menus/GormMenuEditor.m
	* Palettes/0Menus/MenusPalette.m: Eliminate as many of the remaining
	warnings in the code as possible.

2012-04-20 18:53-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormResourceEditor.m: Correct compiler warnings.

2012-04-20 12:16-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Palettes/2Controls/GormNSPopUpButton.h
	* Palettes/2Controls/GormNSPopUpButton.m: Added new files for
	Gorm subclass of NSPopUpButton.
