@@ -1,8 +1,13 @@
+2013-01-13 17:45-EST Gregory John Casamento <greg.casamento@gmail.com>
+
+	* GormCore/GormViewSizeInspector.m: Correct bug#30886: Gorm should
+	change the document to edited when changing resize attributes.
+
 2013-01-13 16:57-EST Gregory John Casamento <greg.casamento@gmail.com>
 
 	* Palettes/2Controls/GormColorWellAttributesInspector.m: NSColorWell
 	inspector was showing inverted settings after the last change.
-	Corrected this in -ok: and -revert:
+	Corrected this in -ok: and -revert: bug#32827
 
 2012-12-12 12:33-EST Gregory John Casamento <greg.casamento@gmail.com>
 
